--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 :root {
   --white-light: #d8dadfa8;
   --white-light-2: #f2f2f2;
@@ -12,10 +13,12 @@ html,
 body {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans,
-    Helvetica Neue, sans-serif;
+  /* font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans,
+    Helvetica Neue, sans-serif; */
+    
   background-color: var(--white-light-2);
 }
+
 html {
   font-size: 10px;
 }
@@ -27,6 +30,8 @@ a {
 
 * {
   box-sizing: border-box;
+  font-family: 'Roboto', sans-serif;
+
 }
 button {
   border: none;
