--- a/styles/wishlist.module.css
+++ b/styles/wishlist.module.css
@@ -80,7 +80,7 @@
   align-items: center;
   gap: 10px;
   padding-left: 1px;
-  padding-bottom: 15px;
+  padding-bottom: 20px;
 }
 .image {
   border-radius: 5px;
@@ -98,16 +98,17 @@
   flex-direction: column;
   align-items: center;
   width: 100%;
-  padding-bottom: 10px;
+  padding-bottom: 3px;
   padding-left: 5px;
-  margin-top: 55px;
-  margin-bottom: 55px;
 }
 .emptyList img {
     width: 100px;
+    margin-bottom: 20px;
+    scale: 1.02;
+    transform: translateX(13px);
 }
 .emptyList h3 {
-  font-size: 1.5rem;
+  font-size: 1.6rem;
   padding: 0;
   margin: 0;
   color: rgb(34, 34, 34);
@@ -116,8 +117,9 @@
   padding: 0;
   margin: 0;
   color: rgb(34, 34, 34);
+  font-size: 1.3rem;
   margin-top: 5px;
-  font-size: 1.2rem;
+  margin-bottom: 10px;
 }
 .arrowIconBtn {
     padding: 0;
@@ -134,14 +136,14 @@
   height: 60px;
   overflow: hidden !important;
   animation-name: heightAnimation;
-  animation-duration: 200ms;
-  animation-timing-function: ease-out;
+  animation-duration: 300ms;
+  animation-timing-function: ease;
 }
 .collapse .arrowIcon {
     transform: rotate(180deg);
     animation-name: rotateAnimation;
-    animation-duration: 200ms;
-    animation-timing-function: ease-out;
+    animation-duration: 300ms;
+    animation-timing-function: ease;
 }
 
 @keyframes rotateAnimation {
@@ -153,7 +155,7 @@
 }
 @keyframes heightAnimation {
   0% {
-    height: 200px;
+    height: 240px;
   }
   100% {
     height: 60px;
@@ -162,14 +164,14 @@
 
 .expand {
   animation-name: heightAnimationExpand;
-  animation-duration: 200ms;
-  animation-timing-function: ease-out;
+  animation-duration: 300ms;
+  animation-timing-function: ease;
 }
 .expand .arrowIcon {
     transform: rotate(0deg);
     animation-name: rotateAnimationExpand;
-    animation-duration: 200ms;
-    animation-timing-function: ease-in;
+    animation-duration: 300ms;
+    animation-timing-function: ease;
 }
 
 @keyframes rotateAnimationExpand {
@@ -181,7 +183,7 @@
 }
 @keyframes heightAnimationExpand {
   0% {
-    height: 70px;
+    height: 60px;
     overflow: hidden;
 }
 100% {
