--- a/components/Cart/CartItems.module.css
+++ b/components/Cart/CartItems.module.css
@@ -55,17 +55,17 @@
 .wishListCheckBox {
   scale: 1.3;
   color: var(--blue-500);
-  transform: translateY(-1px);
+  transform: translateY(-1px) scale(1.3);
 }
 .scaleAnimate {
   animation: scale 50ms ease-in-out;
 }
 @keyframes scale {
   0% {
-    scale: 0;
+    transform: scale(0);
   }
   100% {
-    scale: 1;
+    transform: scale(1);
   }
 }
 
@@ -110,5 +110,5 @@
   
   .escBtn > * { 
     scale: 1.5;
-    transform: translateX(0.4px);
+    transform: translateX(0.4px) scale(1.5);
   }
