--- a/styles/wishlist.module.css
+++ b/styles/wishlist.module.css
@@ -8,6 +8,18 @@
 }
 .title {
   margin-bottom: 10px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.newButton {
+  background-color: var(--blue-500);
+  color: white;
+  font-weight: bold;
+  padding: 10px 15px;
+  border-radius: 5px;
+  font-size: 1.4rem;
 }
 .wishlistContent {
   padding: 0 !important;
@@ -324,4 +336,86 @@
   .right {
     display: none;
   }
+}
+.createListDialog::backdrop {
+  background-color: rgba(0, 0, 0, 0.397);
+}
+.createListDialog[open] {
+  position: fixed;
+  width: 30%;
+  height: 40%;
+  animation: animate 200ms ease-in-out;
+  border: none;
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+  border-radius: 5px;
+  padding: 5px 20px;
+}
+@keyframes animate {
+  0% {
+    height: 0px;
+    width: 0px;
+    opacity: 0;
+  }
+  100% {
+    height: 40%;
+    width: 30%;
+    opacity: 1;
+  }
+}
+.createButton {
+  position: absolute;
+  bottom: 10px;
+  width: calc(100% - 40px);
+  background-color: var(--blue-500);
+  padding: 10px;
+  border-radius: 5px;
+  color: white;
+  font-weight: bold;
+  font-size: 1.4rem;
+}
+.listnameDiv h4 {
+ margin: 0;
+ padding: 0;
+ font-size: 1.4rem;
+ font-weight: 400;
+ color: rgb(34, 34, 34);
+ margin-bottom: 2px;
+}
+.listnameDiv input {
+  width: 100%;
+  border: none;
+  outline: none;
+  font-size: 1.4rem;
+  padding: 10px 5px;
+  border-bottom: 1px solid #eee;
+  text-transform: capitalize;
+  border-radius: 5px;
+}
+.errorInput {
+  border: 1px solid red !important;
+}
+.escBtn {
+  position: absolute;
+  right: 1rem;
+  top: 12px;
+  /* transform: translateY(-50%); */
+  padding: 0.8rem;
+  background-color: var(--blue-500);
+  border-radius: 20px;
+  font-weight: bold;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 200;
+  color: white;
+  outline: none;
+  border: none;
+}
+.tippy {
+  z-index: 100000000 !important;
+}
+
+.escBtn > * { 
+  scale: 1.4;
+  transform: translate(0.4px, 0.5px) scale(1.4);
 }
