--- a/styles/wishlist.module.css
+++ b/styles/wishlist.module.css
@@ -80,9 +80,13 @@
   border-radius: 5px;
   letter-spacing: 1px;
 }
-.itemButtons button:not(.arrowIconBtn):hover {
+.itemButtons button:not(.arrowIconBtn, .deleteButton):hover {
   background-color: var(--blue-500);
   color: white;
+}
+.deleteButton:hover {
+  color: white;
+  background-color: rgba(255, 0, 0, 0.8);
 }
 .itemName {
   font-size: 1.9rem;
@@ -433,4 +437,34 @@
 .noListError svg {
   color: red;
   transform: scale(1.3);
+}
+.confirmDialogText {
+  font-size: 1.5rem !important;
+  margin-left: 2px;
+}
+.deleteListDialog::backdrop {
+  background-color: rgba(0, 0, 0, 0.397);
+}
+.deleteListDialog[open] {
+  position: fixed;
+  width: 30%;
+  height: 21%;
+  animation: animateDelete 200ms ease-in-out;
+  border: none;
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+  border-radius: 5px;
+  padding: 5px 20px;
+}
+@keyframes animateDelete {
+  0% {
+    transform: scale(0);
+    opacity: 0;
+  }
+  100% {
+    transform: scale(1);
+    opacity: 1;
+  }
+}
+.redBg {
+  background-color: rgba(255, 0, 0, 0.8);
 }
